# wasm-ide

./: .gitignore  Cargo.toml  README.md  Trunk.toml  codemirror_interface.ts  config.example.json  flake.nix  index.html  package-lock.json  package.json  rust-toolchain.toml  start_worker.js  start_worker_thread.js
.github/: dependabot.yml
.github/workflows/: rust.yml
codemirror/: codemirror_interface.ts  package-lock.json  package.json  tsconfig.json
common/: Cargo.toml
common/src/: config.rs  lib.rs  opfs.rs
frontend/: Cargo.toml  default_code.txt  default_stdin.txt
frontend/locales/: ca.json  en.json  es.json  it.json  vec.json
frontend/src/: editor.rs  editor_dir.rs  editor_view.rs  enum_select.rs  main.rs  output.rs  settings.rs  status_view.rs  theme.rs  util.rs  workspace.rs
frontend/src/backend/: combined.rs  mod.rs  remote.rs  worker.rs
frontend/src/backend/js/: mod.rs  worker.js
frontend/src/contest_api/: cms.rs  mod.rs  terry.rs
style/: main.scss
testsuite/: build.sh
worker/: Cargo.toml
worker/.cargo/: config.toml
worker/src/: compiler.rs  exec.rs  instrument.rs  lib.rs  ls.rs  main.rs  test.rs  thread.rs  util.rs  wasi.rs
worker/src/lang/: cpp.rs  mod.rs  python.rs
worker/src/os/: fs.rs  mod.rs  pipe.rs  process.rs  start_proc.js  syscall.rs
