[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
console_error_panic_hook = "0.1.7"
tracing = { version = "0.1.44", features = ["release_max_level_info"] }
tracing-subscriber = "0.3.23"
tracing-web = "0.1.3"
derive_more = { version = "2.1.1", features = ["from"] }
gloo-utils = "0.2.0"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
js-sys = "0.3.82"
web-sys = { version = "0.3.82", features = ["StorageManager", "FileSystemDirectoryHandle", "FileSystemGetDirectoryOptions", "FileSystemFileHandle", "FileSystemGetFileOptions", "FileSystemWritableFileStream", "File", "Navigator", "FileSystemRemoveOptions"] }
