[package]
name = "frontend"
version = "0.1.0"
authors = ["Luca Versari <veluca93@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.102"
leptos = { version = "0.8.19", features = ["csr"] }
common = { path = "../common" }
web-sys = { version = "0.3.82", features = ["Document", "HtmlDocument", "Worker", "WorkerOptions", "WorkerType", "Storage", "Window"] }
wasm-bindgen-futures = "0.4.55"
serde-wasm-bindgen = "0.6.5"
icondata = "0.6.0"
serde_json = "1.0.149"
serde = "1.0.228"
wasm-bindgen = "0.2.100"
leptos-use = "0.16.3"
gloo-timers = { version = "0.3.0", features = ["futures"] }
leptos_i18n = "0.6.0-rc.2"
tracing = { version = "0.1.44" }
js-sys = "0.3.82"
send_wrapper = "0.6.0"
strum = { version = "0.27.2", features = ["derive"] }
futures-util = "0.3.31"
gloo-net = "0.6.0"
gloo-utils = "0.2.0"
futures-channel = "0.3.31"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
http = "1.4.0"

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "it", "es", "ca", "vec"]
