[package]
name = "worker"
version = "0.1.0"
authors = ["Luca Versari <veluca93@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.99"
futures = "0.3.31"
js-sys = "0.3.77"
common = { path = "../common" }
send_wrapper = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_repr = "0.1.20"
tar = "0.4.44"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["DedicatedWorkerGlobalScope", "WorkerLocation", "MessageEvent", "Worker", "WorkerOptions", "WorkerType", "ReadableStreamDefaultReader"] }
web-time = "1.1.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-net = "0.6.0"
tracing = { version = "0.1.41" }
zerocopy = { version = "0.8.26", features = ["derive"] }
bitflags = "2.9.2"
thiserror = "2.0.15"
enum-as-inner = "0.6.1"

[dev-dependencies]
serde_json = "1.0.143"
wasm-bindgen-test = "0.3.50"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
