[package]
name = "worker"
version = "0.1.0"
authors = ["Luca Versari <veluca93@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
js-sys = "0.3.82"
common = { path = "../common" }
send_wrapper = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_repr = "0.1.20"
tar = "0.4.44"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features = ["DedicatedWorkerGlobalScope", "WorkerLocation", "MessageEvent", "Worker", "WorkerOptions", "WorkerType", "ReadableStreamDefaultReader"] }
web-time = "1.1.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-net = "0.6.0"
tracing = { version = "0.1.41" }
zerocopy = { version = "0.8.27", features = ["derive"] }
bitflags = "2.10.0"
thiserror = "2.0.17"
enum-as-inner = "0.6.1"

[dev-dependencies]
serde_json = "1.0.145"
wasm-bindgen-test = "0.3.55"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
